--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.576"
-        app:srcCompat="@drawable/dice_1" />
+        app:srcCompat="@drawable/dice_1"
+        android:contentDescription="@string/dice_image" />
 
     <Button
         android:id="@+id/rollBtn"
